# testpy

./: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: migrate.yml  pr.yml  schema-revision-migrate.yml  test.yml
api/: .gitignore  Dockerfile  main.py  pyproject.toml  setup.cfg
api/app/: database.py  models.py
api/endpoint_types/: query_endpoint.py
api/endpoints/: users.yaml
migrations/: alembic.ini  env.py  pyproject.toml
migrations/alembic/: env.py
migrations/alembic/versions/: 20260322_1cd3b04277c8_initial_users_table.py  20260323_2027ecba5f81_auto_pr_1.py  20260324_1d01d3c522c9_auto_pr_4.py  20260324_385a0236db3d_auto_pr_2.py  20260324_3e0f6fafaf31_auto_pr_1.py  20260324_5ccb2c2cee27_auto_pr_4.py  20260324_721c44e2927a_auto_pr_1.py  20260324_7c27138052eb_auto_pr_4.py  20260324_7cedfcba0670_auto_pr_4.py  20260324_87caf98e61bf_auto_pr_2.py  20260324_aba7ba8e5477_auto_pr_1.py  20260324_d6b56216911b_auto_pr_3.py
postgres/: Dockerfile
