[project]
name = "testpy314"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "databases>=0.9.0",
    "fastapi[standard]>=0.135.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ruff>=0.15.7",
]
