[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ruff>=0.15.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["endpoints*", "endpoint_types*"]